--- a/languages/blogasm.pot
+++ b/languages/blogasm.pot
@@ -480,7 +480,7 @@ msgstr ""
 #: inc/framework/welcome-screen/class-welcome-screen.php:141
 #: inc/framework/welcome-screen/class-welcome-screen.php:187
 msgid ""
-"Need help to setup your website with Atento theme? Visit our support forum "
+"Need help to setup your website with Blogasm theme? Visit our support forum "
 "and browse support topics or create new, one of our support member will "
 "follow and help you to solver your issue."
 msgstr ""
